--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BrandSite</title>
+  <title>Flow Bench</title>
+
+      <!-- Twitter Card Tags -->
+      <meta name="twitter:card" content="summary">
+      <meta name="twitter:site" content="@flow_bench">
+  
+      <!-- Facebook OG Tags -->
+      <meta property="og:url" content="https://www.flowbench.io">
+      <meta property="og:type" content="website">
+      <meta property="og:site_name" content="Flow Bench">
+      <meta property="og:title" content="Diverse teams. Many apps. One journey.">
+      <meta property="og:description" content="If you've ever worked on a product experience project, you probably know how messy it can get. Kanban boards and project plans fail to give teams a sense of how everything hangs together. Flow Bench helps different teams get clear on and contribute to the overall user journey. 
+
+      Whether you're a designer, marketer, developer or product manager - Flow Bench makes you the hero of the journey you're building.">
+      <meta property="og:image" content="https://flowbench.io/assets/opengraph.png" />
+      <meta property="og:image:width" content="1200">
+      <meta property="og:image:height" content="627">
+      <meta property="og:locale" content="en">
+      <meta name="twitter:card" content="summary_large_image">
+
+
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
